--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ img {
   font-size: 16px;
   color: var(--lightgray);
   line-height: 26px;
-
 }
 /* ---------------------
     Header Style Start
@@ -125,15 +124,59 @@ img {
 .quick-list-content {
   width: 50%;
 }
-.gray{
-    color: var(--lightgray);
-    font-weight: 400;
+.gray {
+  color: var(--lightgray);
+  font-weight: 400;
 }
-.primary-color{
-    color: var(--primary);
+.primary-color {
+  color: var(--primary);
 }
-.quick-list-content p{
+.quick-list-content p {
   margin-bottom: 30px;
   text-align: justify;
 }
 
+/* feature section */
+.features {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 120px;
+}
+.feature-content {
+  width: 45%;
+}
+.feature-content h2 {
+  padding-left: 20px;
+  border-left: 5px solid var(--primary);
+}
+.feature-image {
+  width: 47.5%;
+}
+.article {
+  margin-top: 25px;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+  border-radius: 8px;
+}
+.article h4 {
+  font-weight: 600;
+  font-size: 20px;
+}
+.year {
+  width: 250px;
+  height: 150px;
+  color: var(--white);
+  background: var(--primary);
+  text-align: center;
+  position: relative;
+  left: 33rem;
+  bottom: 6rem;
+  border-radius: 10px;
+}
+.year h1 {
+  font-weight: 700;
+  font-size: 60px;
+  margin-top: 20px;
+  display: inline-block;
+}
